--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "store",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://atagurban.github.io/store2/",
+  "homepage": "https://atagurban.github.io/store-deploy/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
